- Fix alignment and wrapping on the advanced search form - Remove inline styles from search fields table - Relates to issue #429654

--- a/templates/en/css/dynamic_css.tpl.css
+++ b/templates/en/css/dynamic_css.tpl.css
@@ -1101,6 +1101,11 @@ div.cv_selection, .light_background
 /*
  * Advanced Search
  */
+.search_fields {
+	border: 0;
+	width: 100%;
+	text-align: center;
+}
 .search_fields th {padding: 4px;}
 .search_fields td {padding: 4px;}
 .search_fields th {padding:4px;}
@@ -1111,6 +1116,7 @@ th.search_heading {
     padding-right:0.5em;
     padding-top:0.5em;
     text-align:right;
+    white-space:nowrap;
 }
 
 td.search_multi_input {
